--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,9 +31,8 @@ jobs:
     - uses: actions/upload-artifact@v4
       with:
         name: PDF
-        path: src/resume.pdf
+        path: resume.pdf
     - run: |
-        ls -la
         echo "event name: ${{ github.event_name }}"
         echo "Github Actions powered automated release [workflow!](https://github.com/mbmcmullen27/Resume/actions/workflows/build.yaml)" >> release.md
         
